@@ -32,7 +32,7 @@ EXAMPLE1
      print "Count of Czech CPAN authors: $count\n";
 
      # Output:
-     # Count of Czech CPAN authors: 36
+     # Count of Czech CPAN authors: 37
 
 EXAMPLE2
      # Pragmas.
@@ -59,37 +59,38 @@ EXAMPLE2
      #     [2]  "DANPEDER",
      #     [3]  "DOUGLISH",
      #     [4]  "HIHIK",
-     #     [5]  "HPA",
-     #     [6]  "JANPAZ",
-     #     [7]  "JANPOM",
-     #     [8]  "JENDA",
-     #     [9]  "JIRA",
-     #     [10] "JSPICAK",
-     #     [11] "KLE",
-     #     [12] "KOLCON",
-     #     [13] "MAJLIS",
-     #     [14] "MICHALS",
-     #     [15] "MILSO",
-     #     [16] "MJFO",
-     #     [17] "PAJAS",
-     #     [18] "PASKY",
-     #     [19] "PEK",
-     #     [20] "POPEL",
-     #     [21] "PSME",
-     #     [22] "RUR",
-     #     [23] "RVASICEK",
-     #     [24] "SEIDLJAN",
-     #     [25] "SKIM",
-     #     [26] "SMRZ",
-     #     [27] "STRAKA",
-     #     [28] "TKR",
-     #     [29] "TRIPIE",
-     #     [30] "TYNOVSKY",
-     #     [31] "VASEKD",
-     #     [32] "YENYA",
-     #     [33] "ZABA",
-     #     [34] "ZEMAN",
-     #     [35] "ZOUL"
+     #     [5]  "HOLCAPEK",
+     #     [6]  "HPA",
+     #     [7]  "JANPAZ",
+     #     [8]  "JANPOM",
+     #     [9]  "JENDA",
+     #     [10] "JIRA",
+     #     [11] "JSPICAK",
+     #     [12] "KLE",
+     #     [13] "KOLCON",
+     #     [14] "MAJLIS",
+     #     [15] "MICHALS",
+     #     [16] "MILSO",
+     #     [17] "MJFO",
+     #     [18] "PAJAS",
+     #     [19] "PASKY",
+     #     [20] "PEK",
+     #     [21] "POPEL",
+     #     [22] "PSME",
+     #     [23] "RUR",
+     #     [24] "RVASICEK",
+     #     [25] "SEIDLJAN",
+     #     [26] "SKIM",
+     #     [27] "SMRZ",
+     #     [28] "STRAKA",
+     #     [29] "TKR",
+     #     [30] "TRIPIE",
+     #     [31] "TYNOVSKY",
+     #     [32] "VASEKD",
+     #     [33] "YENYA",
+     #     [34] "ZABA",
+     #     [35] "ZEMAN",
+     #     [36] "ZOUL"
      # ]
 
 DEPENDENCIES
