@@ -1,4 +1,5 @@
 0.23
+ - Add HOLCAPEK CPAN account.
  - Update Module::Install to 1.19 version.
  - Update copyright years.
 
